--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,12 @@ jdbc.url=jdbc:h2:tcp://localhost/~/test
 jdbc.driver=org.h2.Driver
 jdbc.username=sa
 jdbc.password=
+
+email.host=smtp.gmail.com
+email.port=587
+email.username=basanets.viktor@gmail.com
+email.password=new_Pa55w0r9
+email.protocol=smtp
+email.auth=true
+email.tls=true
+email.debug=true
